fix contrast ratio for text 'stats__legend'

--- a/src/sass/blocks/stats.scss
+++ b/src/sass/blocks/stats.scss
@@ -42,7 +42,7 @@
   padding-bottom: 14px;
 
   text-align: center;
-  color: hsla(0, 0%, 100%, 0.3);
+  color: hsla(0, 0%, 100%, 0.5);
 
   background-color: $bg-darkgrey;
 }
@@ -141,7 +141,7 @@
     display: block;
     width: 50%;
 
-    color: hsla(0, 5%, 5%, 0.4);
+    color: hsla(0, 5%, 5%, 0.6);
     text-align: center;
   }
 
